tests/files/lexer_tests/should_fail/054.cmdr
// Illegal character in variable name (ascii 21)
myvar = 21;